@@ -569,7 +569,7 @@ void z80_ralloc2_cc(ebbIndex *ebbi)
 
 	alive_tree_dec(tree_decomposition, control_flow_graph);
 	
-	//good_re_root(tree_decomposition);
+	good_re_root(tree_decomposition);
 
 	if(z80_opts.dump_graphs)
 		dump_tree_decomposition(tree_decomposition);
